Use List.of, and throw host error if failing to find relevant class/field/method in reference processing command. Make findJlaField static.